feat: new route to get music genres
